--- a/inicio.html
+++ b/inicio.html
@@ -1,8 +1,10 @@
 <html>
 <head>
 <title>Primer pagina</title>
+<link href="css/estilos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <p>Hola, esta es mi primer pagina en Html. Solo es una pagina de prueba</p>
+
 </body>
 </html>
